# data_stewart_agent

./: .gitignore  GUIDE_UTILISATEUR.md  README.md
mcp_server/: .env  .env.example  README.md  pyproject.toml  requirements.txt  samconfig.toml.example  template.yaml
mcp_server/.aws-sam/: build.toml
mcp_server/openmetadata/docker-volume/db-data/: #ib_16384_0.dblwr  auto.cnf  binlog.000001  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  ib_buffer_pool  private_key.pem  public_key.pem  server-cert.pem  server-key.pem
mcp_server/openmetadata/docker-volume/db-data/#innodb_redo/: #ib_redo30  #ib_redo41_tmp  #ib_redo42_tmp  #ib_redo43_tmp  #ib_redo44_tmp  #ib_redo45_tmp  #ib_redo46_tmp  #ib_redo47_tmp  #ib_redo48_tmp  #ib_redo49_tmp  #ib_redo50_tmp  #ib_redo51_tmp  #ib_redo52_tmp  #ib_redo53_tmp  #ib_redo54_tmp  #ib_redo55_tmp  #ib_redo56_tmp  #ib_redo57_tmp  #ib_redo58_tmp  #ib_redo59_tmp  #ib_redo60_tmp  #ib_redo61_tmp
mcp_server/openmetadata/docker-volume/db-data/airflow_db/: ab_group.ibd  ab_group_role.ibd  ab_permission.ibd  ab_permission_view.ibd  ab_permission_view_role.ibd  ab_register_user.ibd  ab_role.ibd  ab_user.ibd  ab_user_group.ibd  ab_user_role.ibd  ab_view_menu.ibd  alembic_version.ibd  alembic_version_fab.ibd  dag.ibd  (+54 more)
mcp_server/src/: app.py  auth.py  config.py  openmetadata_client.py  requirements.txt  run.sh
mcp_server/src/tools/: __init__.py  _registry.py  discovery.py  documentation.py  glossary.py  golden_source.py  governance.py  lineage.py  quality.py
mcp_server/tests/: README.md  conftest.py  test_openmetadata_client.py  test_tools.py
(+332 files in other folders)
