[project]
name = "data-steward-mcp"
version = "0.1.0"
description = "MCP server exposing OpenMetadata/DataHub operations for a Data Steward assistant"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "mangum>=0.17.0",
    "pydantic>=2.6.0",
    "boto3>=1.34.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
